--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bazel-*
 
 Assets/StreamingAssets*
 
-Packages/com.github.homuler.mediapipe/PackageResources/MediaPipe/*
-!Packages/com.github.homuler.mediapipe/PackageResources/MediaPipe/*.meta
+# Packages/com.github.homuler.mediapipe/PackageResources/MediaPipe/*
+# !Packages/com.github.homuler.mediapipe/PackageResources/MediaPipe/*.meta
 Packages/com.github.homuler.mediapipe/PackageResources/MediaPipe/object_detection_3d.bytes.meta
-Packages/com.github.homuler.mediapipe/Runtime/Plugins/Protobuf/*.dll
+# Packages/com.github.homuler.mediapipe/Runtime/Plugins/Protobuf/*.dll
